<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".AddTitleFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_addtitle_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_addtitle_34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_addtitle_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_addtitle_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_addtitle_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_addtitle_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/h_guideline_addtitle_42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_10">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/v_sub_guidelineForAddTitle_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/v_sub_guidelineForAddTitle_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/gameTitleImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/nintendo2ds" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/titleFrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f9f9f9"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/notosans_bold"
            android:gravity="center"
            android:text="@string/title_title_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/closeAddTitleFragmentButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/close_button_red"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_guideline_addtitle_80"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imagePickerButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:padding="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/camera_icon"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_42"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_50"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_34"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_34" />

    <ImageButton
        android:id="@+id/qrscanImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/qrcode_scan_icon"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_10"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/title_console_name_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_50"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_42" />

    <Spinner
        android:id="@+id/consoleNameForAddTitleDropdown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_20"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_42" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/title_name_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_58"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_50" />

    <EditText
        android:id="@+id/gameTitleNameForAddTitleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/title_game_title_edit_text"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_58"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_20"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_50" />

    <EditText
        android:id="@+id/gameMakerNameForAddTitleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/title_maker_edit_text"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_20"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_58" />

    <Spinner
        android:id="@+id/gameGenreDropdown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/title_genre_edit_text"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_70"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_34" />

    <EditText
        android:id="@+id/gameMemoForAddTitleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/title_memo_edit_text"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_20"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_66" />

    <EditText
        android:id="@+id/gameRatingForAddTitleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/title_rating_edit_text"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_70"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_10" />

    <EditText
        android:id="@+id/gamePriceForAddTitleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/title_buy_price_edit_text"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_70"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_18"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/gameBuyDateForAddTitleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/title_buy_date_edit_text"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_70"
        app:layout_constraintTop_toTopOf="@id/h_guideline_addtitle_26" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/title_maker_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_66"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_58" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/title_genre_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_42"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_70"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_50"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_34" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/title_rating_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_18"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_70"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_50"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_10"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_34"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_70"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_50"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_26">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title_buy_date_text"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/showDatePickerForAddTitleButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/date_picker_3" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/title_buy_price_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_26"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_70"
        app:layout_constraintStart_toStartOf="@id/v_guideline_addtitle_50"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_18" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/title_memo_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/h_guideline_addtitle_90"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_addtitle_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_66" />

    <ImageButton
        android:id="@+id/addTitleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/add_complete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_guideline_addtitle_90" />

</androidx.constraintlayout.widget.ConstraintLayout>