<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/rounded_corner_none_border_white"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="@id/hor_guideline_statistic_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-black"
                android:gravity="bottom|center"
                android:text="@string/statisticfragment_chart1_text"
                android:textSize="16sp"
                android:visibility="visible" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/platformPieChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5"></com.github.mikephil.charting.charts.PieChart>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-black"
                android:gravity="bottom|center"
                android:text="@string/statisticfragment_chart2_text"
                android:textSize="16sp"
                android:visibility="visible" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/genrePieChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5"></com.github.mikephil.charting.charts.PieChart>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:background="@drawable/rounded_corner_none_border_white"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hor_guideline_statistic_50">

        <TextView
            android:id="@+id/consumePriceTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:fontFamily="sans-serif-black"
            android:gravity="bottom|center"
            android:text="@string/statisticfragment_chart3_text"
            android:textSize="16sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/consumeBarChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="8.5"></com.github.mikephil.charting.charts.BarChart>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline_statistic_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline_statistic_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline_statistic_08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline_statistic_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline_statistic_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline_statistic_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ver_guideline_statistic_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>